--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -69,16 +69,43 @@ jobs:
       - name: Download dependencies
         run: make deps
 
-      - name: Run govulncheck
+      - name: Run govulncheck and Filter Results
         run: |
           go install golang.org/x/vuln/cmd/govulncheck@latest
-          # Exclude GO-2025-3829 as it's a test-only vulnerability with no available fix
-          govulncheck -exclude GO-2025-3829 ./...
 
-      - name: Run govulncheck with JSON output
-        run: |
-          govulncheck -json ./... > govulncheck-report.json
-        continue-on-error: true
+          # Run govulncheck, capturing its exit code without failing the step.
+          # Exit code 0 = no vulns, 3 = vulns found, other = error.
+          exit_code=0
+          govulncheck -json ./... > govulncheck-report.json || exit_code=$?
+
+          echo "--- govulncheck report ---"
+          cat govulncheck-report.json
+          echo "--------------------------"
+
+          if [ $exit_code -eq 0 ]; then
+            echo "Success: No vulnerabilities found."
+            exit 0
+          fi
+
+          # If exit code is not 3, it's an unexpected error.
+          if [ $exit_code -ne 3 ]; then
+            echo "Error: govulncheck failed with unexpected exit code $exit_code."
+            exit $exit_code
+          fi
+
+          # Exit code is 3, so vulns were found. Check if they are all ignorable.
+          # Use jq to count vulnerabilities that are NOT the one we want to ignore.
+          # The `-s` flag reads the JSON stream into a single array.
+          UNIGNORED_COUNT=$(jq -s 'map(select(.osv.id != "GO-2025-3829")) | length' govulncheck-report.json)
+
+          if [ "$UNIGNORED_COUNT" -eq 0 ]; then
+            echo "Success: Only ignored vulnerabilities were found."
+            exit 0
+          else
+            echo "Error: Found $UNIGNORED_COUNT unignored vulnerabilities."
+            jq -s 'map(select(.osv.id != "GO-2025-3829"))' govulncheck-report.json
+            exit 1
+          fi
 
       - name: Upload govulncheck report
         uses: actions/upload-artifact@v4
@@ -144,13 +171,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Run OSV Scanner
-        uses: google/osv-scanner/actions/scanner@v1
+      - name: Set up Go
+        uses: actions/setup-go@v5
         with:
-          scan-args: |
-            --format=sarif
-            --output=osv-results.sarif
-            ./
+          go-version: ${{ env.GO_VERSION }}
+          cache: true
+
+      - name: Install OSV Scanner
+        run: go install github.com/google/osv-scanner/cmd/osv-scanner@v1
+
+      - name: Run OSV Scanner
+        run: |
+          # Add the Go bin directory to the PATH to ensure osv-scanner is found
+          export PATH=$(go env GOPATH)/bin:$PATH
+          osv-scanner --format=sarif --output=osv-results.sarif ./
 
       - name: Upload SARIF results
         uses: github/codeql-action/upload-sarif@v3
