--- a/deploy/docker-compose.minimal.yml
+++ b/deploy/docker-compose.minimal.yml
@@ -10,6 +10,8 @@ services:
     restart: unless-stopped
     ports:
       - "${APP_PORT:-8080}:8080"
+    security_opt:
+      - no-new-privileges:true
     environment:
       - SERVER_PORT=8080
       - SERVER_HOST=0.0.0.0
