--- a/deploy/docker-compose.nginx.yml
+++ b/deploy/docker-compose.nginx.yml
@@ -68,6 +68,8 @@ services:
       - ./certbot/www:/var/www/certbot
       - ./certbot/conf:/etc/letsencrypt
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --webroot -w /var/www/certbot --quiet; sleep 12h & wait $${!}; done;'"
+    security_opt:
+      - no-new-privileges:true
     networks:
       - external
 
